# pcodec-python

./: Cargo.toml
src/: lib.rs  lib_example.rs
test/: test_pcodec.py
